Selection Trouble w/Armatures when Viewport Locked to Object #51629

Closed
opened 2017-05-25 22:40:33 +02:00 by Colin Levy · 4 comments

System Information
OS X (10.12) AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: 2.78.5 (bbce6ce249)
Worked: 2.78c

Short description of error
When I am locking my view to a bone or object I'm having difficulties with selection, mostly with the Armature I'm working with (even in Object mode). When in pose mode, I must box select (spotty) or find the object in another 3D view or the outliner to be able to select it properly. Right-click is simply not selecting in that view. Also experimented with all Selection Methods in the System panel of the User Prefs.

Thanks!

Exact steps for others to reproduce the error
Try to select the circle bone in the attached file.selectionViewLock.blend

**System Information** OS X (10.12) AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: 2.78.5 (bbce6ce249) Worked: 2.78c **Short description of error** When I am locking my view to a bone or object I'm having difficulties with selection, mostly with the Armature I'm working with (even in Object mode). When in pose mode, I must box select (spotty) or find the object in another 3D view or the outliner to be able to select it properly. Right-click is simply not selecting in that view. Also experimented with all Selection Methods in the System panel of the User Prefs. Thanks! **Exact steps for others to reproduce the error** Try to select the circle bone in the attached file.[selectionViewLock.blend](https://archive.blender.org/developer/F609263/selectionViewLock.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ColinLevy

Added subscriber: @ColinLevy

This issue was referenced by 4badf67739

This issue was referenced by 4badf67739227da702598ccd18a4840f7d7d910b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51629
No description provided.