Fix T51629: Select w/ object lock fails

Regression in 195d0fba